<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/appbar_padding"
    tools:context=".CustomerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnAccept_Customer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chkEdit_Customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:paddingRight="10dp"
                android:text="@string/edit"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCustomerId_Customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/customer_id"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingTop="6dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="6dp">

                    <TextView
                        android:id="@+id/textView7"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/document_type" />

                    <Spinner
                        android:id="@+id/spDocumentType_Customer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDocumentNumber_Customer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/document_number"
                        android:inputType="number"
                        android:maxLength="11" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBusinessName_Customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/business_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPaternalSurname_Customer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/paternal_surname"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMaternalSurname_Customer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/maternal_surname"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNames_Customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/names"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddress_Customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etReference_Customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reference" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone_Customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail_Customer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/lytVendorByCustomer_Customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingTop="6dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="6dp">

                    <TextView
                        android:id="@+id/textView8"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/business_line" />

                    <Spinner
                        android:id="@+id/spBusinessLine_Customer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingTop="6dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="6dp">

                    <TextView
                        android:id="@+id/textView9"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zone" />

                    <Spinner
                        android:id="@+id/spZone_Customer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingTop="6dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="6dp">

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/route" />

                    <Spinner
                        android:id="@+id/spRoute_Customer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etVendor_Customer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/vendor" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAccept_Customer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>